apps/home-automation/zigbee2mqtt/manifests/zigbee2mqtt-external-auth.securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: zigbee2mqtt-external-auth
  namespace: home-automation
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: zigbee2mqtt-external
  oidc:
    provider:
      issuer: https://id.edgard.org
    clientID: envoy-gateway
    clientSecret:
      name: envoy-gateway-oidc-client
    redirectURL: https://zigbee2mqtt.edgard.org/oauth2/callback
    logoutPath: /oauth2/logout
    cookieDomain: edgard.org
    scopes:
      - openid
      - profile
      - email
