apps/home-automation/zigbee2mqtt/manifests/zigbee2mqtt-external.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-external
  namespace: home-automation
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/enabled: "true"
    hajimari.edgard.org/icon: zigbee
spec:
  parentRefs:
    - name: external
      namespace: platform-system
      sectionName: https
  hostnames:
    - zigbee2mqtt.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          port: 8080
