apps/home-automation/zigbee2mqtt/manifests/zigbee2mqtt-internal.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-internal
  namespace: home-automation
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - zigbee2mqtt.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          port: 8080
